log/build_2022-02-09_16-24-14/cv_basics/stderr.log
  File "/home/halvor/dev_ws/install/cv_basics/lib/python3.8/site-packages/cv_basics/helper.py", line 16
    from cv_basics import model_optimal.h5
                                       ^
SyntaxError: invalid syntax

